# Media-stream-analyzer

./: AGENTS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  requirements-dev.txt  requirements.txt
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docs/: DESIGN_SYSTEM.md  GRID_LAYOUT_SPEC.md  LAYOUT_SPECIFICATION.md  PAGE_STRUCTURE_ASCII.md  SPRINT_6_PLAN.md  srt-metrics-reference.md  testing-sprint3.md
src/api/: main.py
src/backend/: __init__.py  alert_manager.py  config.py  libsrt_native.py  main.py  main_v2.py  main_v3.py  srt_client.py  srt_connection.py  stream_pipeline.py  websocket_server.py  websocket_server_v2.py  websocket_server_v3.py
src/core/: config.py  constants.py  (+4 more)
tests/: conftest.py  test_alert_manager.py  test_audio_analyzer.py  test_end_to_end.py  test_ffmpeg_audio_decoder.py  test_keyframe_extractor.py  test_libsrt_native.py  test_srt_backend.py  test_stream_metadata.py  test_stream_pipeline.py  test_websocket.py
v2/: AGENTS.md  README.md  pyproject.toml  requirements.txt
v2/docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md
v2/src/analyzers/audio/: audio_analyzer.py  base.py  dbfs_meter.py  ebu_r128.py  fft_spectrum.py  silence_detector.py  true_peak.py
v2/src/core/: config.py  constants.py  models.py
v2/src/frontend/: audio-analyzer.html  index.html  video-analyzer.html
v2/src/frontend/css/: styles.css
v2/src/frontend/js/: app.js
v2/tests/: conftest.py  test_audio_analyzer.py  test_dbfs_meter.py  test_ebu_r128.py  test_fft_spectrum.py  test_silence_detector.py  test_true_peak.py
(+30 files in other folders)
